--- a/estilo/style.css
+++ b/estilo/style.css
@@ -77,6 +77,7 @@ nav {
     padding: 10px;
     box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.342);
     margin: auto;
+    font-size: 0.796em;
 }
 
 nav > a{
